[project]
name = "comfyui_roop"
description = "ComfyUI nodes for the roop A1111 webui script."
version = "1.0.0"
license = "LICENSE"
dependencies = ["insightface==0.7.3", "onnx==1.14.0", "onnxruntime==1.15.0", "opencv-python"]

[project.urls]
Repository = "https://github.com/ssitu/ComfyUI_roop"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_roop"
Icon = ""
